build.log

> dr2-community-app@0.1.0 build
> next build

/Users/helmirosli/Projects/dr2-community-app/node_modules/next/dist/server/config.js:1386
    config.experimental ??= {};
                        ^^^

SyntaxError: Unexpected token '??='
    at wrapSafe (internal/modules/cjs/loader.js:1001:16)
    at Module._compile (internal/modules/cjs/loader.js:1049:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1114:10)
    at Module.load (internal/modules/cjs/loader.js:950:32)
    at Function.Module._load (internal/modules/cjs/loader.js:790:12)
    at Module.require (internal/modules/cjs/loader.js:974:19)
    at Module.mod.require (/Users/helmirosli/Projects/dr2-community-app/node_modules/next/dist/server/require-hook.js:79:28)
    at require (internal/modules/cjs/helpers.js:101:18)
    at Object.<anonymous> (/Users/helmirosli/Projects/dr2-community-app/node_modules/next/dist/cli/next-test.js:26:56)
    at Module._compile (internal/modules/cjs/loader.js:1085:14)
